packages/script/zenza-watch/src/components/player/controls.css
:host {
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;

  background: rgb(25 25 25 / 0.5);
}

div.seekbar {
  background: rgb(36 36 36 / 0.5);
  margin: auto;
  padding-inline: 6px;

  width: calc(100% - 12px);
  height: 8px;

  position: relative;
  cursor: pointer;

  &:hover {
    height: 18px;
  }

  &::before {
    content: "";
    background: #885;

    position: absolute;
    top: 0;
    left: calc(var(--buffered-start, 0) / var(--total-duration, 0) * 100%);
    bottom: 0;
    width: calc(
      (var(--buffered-end, 0) - var(--buffered-start, 0)) /
        var(--total-duration, 0) * 100%
    );

    transition: 0.2s linear 0s;
    transition-property: left, width;
  }

  &::after {
    content: "";
    background: #ddd;

    display: block;
    width: 12px;
    height: 100%;

    translate: -50%;

    margin-left: calc(var(--position, 0) / var(--total-duration, 0) * 100%);
  }

  &.seeking::after {
    margin-left: calc(
      var(--seek-position, 0) / var(--total-duration, 0) * 100%
    );
  }
}

div.controlbar {
  position: relative;
  left: 0;
  right: 0;
  margin-top: 1ex;

  line-height: 1;
  height: calc(1em + 2ex);

  > div {
    color: #ddd;
    margin: 0;
    padding: 1ex;

    display: flex;
    gap: 1ex;

    position: absolute;
    width: fit-content;
    height: fit-content;

    &.left {
      left: 0;

      span.version {
        display: inline-block;
      }
    }

    &.center {
      left: 50%;
      translate: -50%;
      background: rgb(25 25 25 / 0.8);

      div.controls {
        display: flex;
        gap: 0.5ex;

        span.playControl {
          width: calc(1.2em / 1.4142135623730950488016887242097);
          height: 1.2em;
          margin: -0.1em;
          display: inline-block;
          box-sizing: border-box;

          &.play {
            background:
              no-repeat top / 100% 50%
                linear-gradient(
                  to top right,
                  currentcolor 0,
                  currentcolor 50%,
                  transparent 0,
                  transparent 100%
                ),
              no-repeat bottom / 100% 50%
                linear-gradient(
                  to bottom right,
                  currentcolor 0,
                  currentcolor 50%,
                  transparent 0,
                  transparent 100%
                );
          }

          &.pause {
            background: no-repeat center / 100%
              linear-gradient(
                to right,
                currentcolor 0,
                currentcolor 34%,
                transparent 0,
                transparent 65%,
                currentcolor 0,
                currentcolor 100%
              );
          }
        }
      }
    }

    &.right {
      right: 0;
    }
  }
}

